--- a/index.html
+++ b/index.html
@@ -42,10 +42,8 @@
             operations. <em>Huckleberry</em> has helped dozens of companies,
             from Fortune 50 monoliths to fast-growing Bay Area startups, achieve
             their goals and meet their KPIs by leveraging our extensive network
-            of logistics experts.
-          </p>
-          <p>
-            <em>Huckleberry</em> was established in 2003 to help ambitious
+            of logistics experts.</p>
+          <p><em>Huckleberry</em> was established in 2003 to help ambitious
             businesses discover their true potential. If that resonates, let's
             chat. ☎
           </p>
